--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.46.0",
+    "@iconify-json/ion": "^1.1.10",
+    "@iconify-json/mdi": "^1.1.51",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.2.1",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vueuse/core": "^10.1.2",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "prettier": "^2.8.8",
     "unplugin-auto-import": "^0.15.3",
+    "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.4"
   }
