--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@iconify-json/ion": "^1.1.10",
     "@iconify-json/mdi": "^1.1.51",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@unocss/preset-attributify": "^0.51.12",
+    "@unocss/preset-uno": "^0.51.12",
+    "@unocss/transformer-directives": "^0.51.12",
     "@vitejs/plugin-vue": "^4.2.1",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vueuse/core": "^10.1.2",
@@ -26,7 +29,9 @@
     "eslint-plugin-vue": "^9.11.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "normalize.css": "^8.0.1",
     "prettier": "^2.8.8",
+    "unocss": "^0.51.12",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
