--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@arco-design/web-vue": "^2.46.0",
     "@iconify-json/ion": "^1.1.10",
+    "@iconify-json/material-symbols": "^1.1.42",
     "@iconify-json/mdi": "^1.1.51",
     "@iconify-json/ri": "^1.1.8",
     "@rushstack/eslint-patch": "^1.2.0",
